# antibodyregistry

./: .bumpversion.cfg  .flake8  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
src/bio2bel_antibodyregistry/: __init__.py  __main__.py  cli.py  constants.py  manager.py  models.py  parser.py
tests/: __init__.py  cases.py  constants.py  test.results.csv  test_populate.py
